--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 
 
 This archive contains the distribution Data-Rx, version
-0.007:
+0.100110:
 
   perl implementation of Rx schema system
 
-This software is copyright (c) 2009 by Ricardo SIGNES.
+This software is copyright (c) 2010 by Ricardo SIGNES.
 
 This is free software; you can redistribute it and/or modify it under
-the same terms as perl itself.
+the same terms as the Perl 5 programming language system itself.
 
